force-app/main/default/objects/SPEN_Holiday__c/SPEN_Holiday__c.object-meta.xml
<CustomObject>
    <description>This object will hold holiday details.</description>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>