force-app/main/default/objects/SPEN_Holiday__c/fields/SPEN_HolidayDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HolidayDate__c</fullName>
    <description>It hold Holiday Date in Holiday Object.</description>
    <label>Holiday Date</label>
    <type>Date</type>
</CustomField>