force-app/main/default/objects/SPEN_Holiday__c/fields/SPEN_HolidayReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HolidayReason__c</fullName>
    <description>It hold the holiday Reason in Holiday Object.</description>
    <label>Holiday Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>