force-app/main/default/objects/SPEN_Holiday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_HolidayDate__c</columns>
    <columns>SPEN_HolidayReason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>